---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/methods.pr
---
code_str_repr:
  - struct Person
  - "name : str"
  - "age : i8"
  - fn get_name() str
  - return self.name;
  - ""
  - fn get_age() i8
  - return self.age;
  - ""
  - ""
  - ""
  - "p :: Person.(name: \"John\", age: 32);"
lexer_errors: []
parser_errors: []
parse_warning: []

